# lingmo-plugin

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  package.yml
cmake/: LingmoPluginConfig.cmake.in
debian/: changelog  control  copyright  liblingmoplugin-dev.install  liblingmoplugin1.install
include/LingmoPlugin/: LingmoPlugin.h  LingmoPluginExport.h.in  LingmoPluginVersion.h.in  PluginLoader.h  PluginManager.h  PluginMetadata.h
rpm/: lingmo-plugin.spec
src/: CMakeLists.txt
src/LingmoPlugin/: PluginLoader.cpp  PluginManager.cpp  PluginMetadata.cpp
src/LingmoPlugin/private/: PluginLoader_p.h  PluginManager_p.h  PluginMetadata_p.h
tests/: CMakeLists.txt  tst_PluginManager.cpp  tst_PluginMetadata.cpp
tests/data/: invalid-plugin.lingmo-plugin  plugin-with-deps.lingmo-plugin  valid-plugin.lingmo-plugin
